...
    "haptics" -> "触感反馈"
    "notifications" -> "通知"
    "shortcuts" -> "桌面快捷方式"
    "camera" -> "系统相机"
    "location" -> "位置"
    "background.tasks" -> "后台任务"
    "background.runtime" -> "持续运行环境"
    "location.background" -> "后台位置"
    "alarms" -> "精确闹钟"
    else -> this
}

internal const val EXACT_ALARM_PERMISSION = "android.permission.SCHEDULE_EXACT_ALARM"
